<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40sp"
    android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ID"
        android:hint="@string/enter_id"
        android:inputType="number"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Book_Name"
        android:inputType="text"
        android:hint="@string/enter_book_name"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Auth_Name"
        android:inputType="text"
        android:hint="@string/enter_author_name"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="20sp"
        android:id="@+id/Sub"/>


</LinearLayout>