<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    >
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/user"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:textSize="20sp"
        android:layout_marginBottom="40sp"/>
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/pass"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:layout_marginBottom="40sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Confirm"
        android:textSize="20sp"
        android:text="@string/confirm"
        android:layout_marginBottom="40sp"
        />
</LinearLayout>